--- a/ft.css
+++ b/ft.css
@@ -355,7 +355,7 @@ input[type=checkbox].ft-check:disabled+.ft-validate,input[type=radio].ft-radio:d
 .b4r1, .b4r2, .b4r3 {
     width: 35px;
     height: 5px;
-    background-color: #333;
+    background-color: #FFFFFF;
     margin: 6px 0;
     transition: 0.4s;
 }
